--- a/css/style.css
+++ b/css/style.css
@@ -527,9 +527,11 @@ article ul, article ol { padding-left: 2rem; }
 
 article ul li:not(:last-child), article ol li:not(:last-child) { margin-bottom: .5em; }
 
-.page-template-portfolio .slider-vertical__left { height: 360px; }
+.page-template-portfolio .slider-vertical__left { height: 400px; }
 
-@media only screen and (max-width: 782px) { .page-template-portfolio .slider-vertical__left { height: unset; } }
+@media only screen and (max-width: 880px) { .page-template-portfolio .slider-vertical__left { font-size: 2rem; height: 360px; } }
+
+@media only screen and (max-width: 782px) { .page-template-portfolio .slider-vertical__left { font-size: 1.2rem; height: unset; } }
 
 .page-template-portfolio-item .slider-vertical__right .swiper { margin: 0px; }
 
@@ -1117,6 +1119,10 @@ ul.swiper-wrapper { list-style: none; padding: 0px; width: auto; }
 .slider-vertical__right { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100%; width: 100%; }
 
 .slider-vertical__right .swiper-slide { -webkit-box-sizing: border-box; box-sizing: border-box; min-height: 280px; width: 100%; }
+
+.slider-vertical__right .swiper-slide:not(.swiper-slide-active) { visibility: hidden; }
+
+.slider-vertical__right .swiper-slide:not(.swiper-slide-active) .swiper-pagination { visibility: hidden; }
 
 .slider-vertical [class*="swiper-button"] { background-color: var(--header-color); border: 1px solid #363636; color: #363636; cursor: pointer; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; height: 2rem; width: 100%; margin-top: 0; padding: 0; /* ie fix */ }
 
